# ContextServer

./: .gitignore  README.md  high_level_desc.md  pyproject.toml
client/: cli.py
data/docs/: contextserver.md
server/: main.py  mcp_server.py  path_utils.py  tool_registry.py  web_ui.py
tests/: test_docs_tools.py  test_filesystem_tools.py  test_git_tools.py  test_main.py  test_mcp_stdio_integration.py  test_path_utils.py  test_search_tools.py  test_tool_plugins.py  test_tool_registry.py  test_web_ui.py
tool_plugins/: __init__.py  docs.py  filesystem.py  git.py  search.py
tools/: docs_tools.py  filesystem_tools.py  git_tools.py  search_tools.py
