[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ContextServer"
version = "0.1.0"
description = "MCP tool server exposing filesystem, Git, and search capabilities to AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
context-server = "server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["server*", "tools*", "client*"]
