[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ContextServer"
version = "0.1.0"
description = "MCP tool server and local workbench exposing filesystem, Git, search, and documentation tools to AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
context-server = "server.main:main"
context-server-ui = "server.web_ui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["server*", "tools*", "client*", "tool_plugins*"]
